tests/sdk/tests/storage/singleton.stderr
error: A Template can have only a single `#[storage]`
 --> $DIR/singleton.rs:3:1
  |
3 | #[template]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
